@@ -1,0 +1,147 @@
+/**
+ * \defgroup optimalControl optimalControl 
+ *    
+ * @ingroup ctrlLib
+ *  
+ * Class for optimal control based on Discrete Algebraic Riccati Equation (DARE).
+ * 
+ * \section intro_sec Description
+ * 
+ * Riccati can be used for optimal control based on Discrete Algebraic Riccati Equation (DARE).
+ * In the following, the basics of a LQR (linear quadratic regulation) problem are reported.
+ * The DARE is used to compute the linear gain matrix of the feedback controls. 
+ * 
+ * \section example_sec Example
+ *  
+ * \code 
+ * Riccati r(A,B,V,P,VN,true);
+ * r.solveRiccati(steps);
+ * for(int i=0; i<steps; i++)
+ * {
+ *    u=r.doLQcontrol(i,x);
+ *    x=A*x+B*u;
+ * } 
+ * \endcode 
+ * 
+ * \author Serena Ivaldi
+ * 
+ * Copyright (C) 2010 RobotCub Consortium
+ * CopyPolicy: Released under the terms of the GNU GPL v2.0.
+ * 
+ **/ 
+
+#ifndef __RICCATI_H__
+#define __RICCATI_H__
+
+#include <yarp/sig/Vector.h>
+#include <yarp/sig/Matrix.h>
+#include <iCub/ctrlMath.h>
+
+
+namespace ctrl
+{
+
+/**
+* \ingroup Riccati
+*
+* Classic Riccati recursive formula for optimal control of a LQ problem
+*/
+class Riccati
+{
+protected:
+    yarp::sig::Matrix A, At;
+    yarp::sig::Matrix B, Bt;
+    yarp::sig::Matrix V, VN;
+    yarp::sig::Matrix P;
+
+    yarp::sig::Matrix TN, lastT;
+	yarp::sig::Matrix *Ti;
+	yarp::sig::Matrix *Li;
+    
+    yarp::sig::Vector x;
+
+    size_t n;
+    size_t m;
+	int N;
+
+	bool verbose;
+
+public:
+    /**
+     * Constructor, with initialization of algebraic Riccati equation
+     * 
+     * @param _A  State transition matrix
+     * @param _B  Control matrix
+     * @param _V  State cost matrix
+     * @param _P  Control cost matrix 
+     * @param _VN Final state cost matrix
+     */
+	 Riccati(const yarp::sig::Matrix &_A, const yarp::sig::Matrix &_B,
+             const yarp::sig::Matrix &_V, const yarp::sig::Matrix &_P,
+             const yarp::sig::Matrix &_VN, bool verb=false);
+
+	 /**
+     * Get stored L_i matrix. Call this function only after doRiccati()
+     * 
+     * @param step The time index of the i-th matrix
+     */
+	 yarp::sig::Matrix L(int step);
+
+	 /**
+     * Get stored T_i matrix. Call this function only after doRiccati()
+     * 
+     * @param step The time index of the i-th matrix
+     */
+	 yarp::sig::Matrix T(int step);
+
+    /**
+     * Initialization of algebraic Riccati equation
+     * 
+     * @param _A  State transition matrix
+     * @param _B  Control matrix
+     * @param _V  State cost matrix
+     * @param _P  Control cost matrix 
+     * @param _VN Final state cost matrix
+     */
+	 void setProblemData(const yarp::sig::Matrix &_A, const yarp::sig::Matrix &_B,
+                         const yarp::sig::Matrix &_V, const yarp::sig::Matrix &_P,
+                         const yarp::sig::Matrix &_VN);
+
+	 /**
+     * Solve recursively discrete algebraic Riccati equation (DARE), and stores matrices Ti and Li, where i=0,...,N-1 is the time index 
+     * 
+     * @param steps The number N of steps of the finite horizon controller
+     */
+	 void solveRiccati(int steps);
+
+	 /**
+     * Compute the LQ feedback control, in the form: ret= - L(i) * x 
+     * 
+     * @param step The time index i
+	 * @param x The state vector
+     */
+	 yarp::sig::Vector doLQcontrol(int step, const yarp::sig::Vector &x);
+
+	 /**
+     * Compute the LQ feedback control, in the form: u= - L(i) * x 
+     * 
+     * @param step The time index i
+	 * @param x The state vector
+	 * @param ret The control vector
+     */
+	 void doLQcontrol(int step, const yarp::sig::Vector &x, yarp::sig::Vector &ret);
+
+	 /**
+     * Enable or disable verbose feedback (i.e. printing additional information) 
+     * 
+     * @param verb Flag for verbose mode
+     */
+	 void setVerbose(bool verb=true);
+};
+
+}
+
+
+#endif
+
+
